🏗️ Refactor ➾ Improve Issue & PR Templates and Automation (#1395)
* Add PR's to correct column depending on status

* Fix yaml syntax error

* Update PR template

* Update dev task template

* Update Epic Feature Template

* Update bug report template

* Update add-pr-to-scrum-board.yml

* Only add PR's that are ready for review

--- a/.github/workflows/add-pr-to-scrum-board.yml
+++ b/.github/workflows/add-pr-to-scrum-board.yml
@@ -1,9 +1,8 @@
-name: Add new PR's to the scrum board
+name: Add Ready to Review PR's to the scrum board
 
 on:
   pull_request:
     types:
-      - opened
       - ready_for_review
 
 jobs:
@@ -15,5 +14,4 @@ jobs:
         with:
           project-url: https://github.com/orgs/ecadlabs/projects/9
           github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
-          column: 🚀  Current Sprint
           name: Move PR's to current sprint
