--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -361,11 +361,7 @@ jobs:
   vscode-extension-workflow:
     needs: 
       - publish-npm-packages
-
-    if: ${{ (needs.detect-changes.outputs.vscode == 'true' || 
-            github.event_name == 'release' || 
-            startsWith(github.ref, 'refs/tags/v')) &&
-            !github.event.pull_request.head.repo.fork }}
+    if: ${{ !github.event.pull_request.head.repo.fork }}
     uses: ./.github/workflows/vscode-extension.yml
     secrets:
       GCP_PROJECT: ${{ secrets.GCP_PROJECT }}
