--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -335,14 +335,14 @@ jobs:
           npm publish --workspaces --tag 'preview' --access public --dry-run --no-private
                 
       - name: Publish for prerelease
-        if:  ${{ github.event.action != 'published' && startsWith(github.ref, 'refs/tags/v') }}
+        if:  ${{ github.event.release.prerelease && github.event.action != 'published' && startsWith(github.ref, 'refs/tags/v') }}
         run: |
-          npm publish --workspaces --tag 'next' --access public
+          npm publish --workspace=$GIT_WORKSPACE --tag 'next' --access public
       
       - name: Publish for official release
         if: ${{ !github.event.release.prerelease && github.event.action == 'published' }}
         run: |
-          npm publish --workspaces --tag 'latest' --access public 
+          npm publish --workspace=$GIT_WORKSPACE --tag 'latest' --access public
   
   vscode-extension-workflow:
     needs: 
