--- a/.github/workflows/vscode-extension.yml
+++ b/.github/workflows/vscode-extension.yml
@@ -120,7 +120,7 @@ jobs:
 
       # Separate steps for prerelease and release workflows
       - name: Publish as pre-release
-        if: ${{ github.event.action != 'published' && startsWith(github.ref, 'refs/tags/v') }}
+        if: ${{ github.event.release.prerelease }}
         uses: HaaLeo/publish-vscode-extension@v1.0.4
         with:
           pat: ${{ secrets.VSCE_PAT }}
@@ -130,7 +130,7 @@ jobs:
           preRelease: true
 
       - name: Publish as official release
-        if: ${{ github.event.action == 'published' && !github.event.release.prerelease }}
+        if: ${{ !github.event.release.prerelease }}
         uses: HaaLeo/publish-vscode-extension@v1.0.4
         with:
           pat: ${{ secrets.VSCE_PAT }}
