--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -30,6 +30,14 @@ body:
     validations:
       required: true
   - type: textarea
+    id: str
+    attributes:
+      label: 🆘 Steps to Reproduce?
+      description: Also tell us, what did you expect to happen?
+      placeholder: 1) \n 2) \n 3) \n 4) \n 5)
+    validations:
+      required: true
+  - type: textarea
     id: logs
     attributes:
       label: 🪵 Relevant log output
