--- a/.github/ISSUE_TEMPLATE/dev_task.yml
+++ b/.github/ISSUE_TEMPLATE/dev_task.yml
@@ -40,7 +40,7 @@ body:
     id: ac
     attributes:
       label: ⚖️ Acceptance Criteria
-      value: "✨ Functional: \n- [ ] ... \n \n 📐 Non-Functional: \n- [ ] ... \n "
+      value: "✨ Functional: \n- [ ] \n- [ ] "
     validations:
       required: true
   - type: textarea
@@ -49,18 +49,6 @@ body:
       label: 🔭 Scope
       description: "Explicitly, what is out of scope for this ticket"
       value: "🙅‍♂️ Out of Scope: \n- ... \n \n "
-  - type: textarea
-    id: description
-    attributes:
-      label: 🧰 Work Description
-      description: "Describe what needs to be done"
-      placeholder: "In as much detail as possible, explain the work to be done. Include any architecture or design notes and the sequencing of each thing that needs to be done"
-  - type: input
-    id: estimate
-    attributes:
-      label: 🦄 Sizing
-      description: Estimate the time and effort required in days of effort using Fibonacci sequence numbers (1,)
-      placeholder: "0"
   - type: checkboxes
     id: terms
     attributes:
