--- a/taqueria-vscode-extension-web-ui/package.json
+++ b/taqueria-vscode-extension-web-ui/package.json
@@ -11,8 +11,10 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@microsoft/fast-react-wrapper": "^0.3.15",
 		"@taquito/michel-codec": "^14.0.0",
 		"@taquito/michelson-encoder": "^14.0.0",
+		"@vscode/webview-ui-toolkit": "^1.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
