--- a/taqueria-vscode-extension-web-ui/package.json
+++ b/taqueria-vscode-extension-web-ui/package.json
@@ -21,6 +21,7 @@
 	"devDependencies": {
 		"@types/react": "^18.0.17",
 		"@types/react-dom": "^18.0.6",
+		"@types/vscode-webview": "^1.57.0",
 		"@vitejs/plugin-react": "^2.1.0",
 		"typescript": "^4.6.4",
 		"vite": "^3.1.0",
