chore: prevent vsix publishing on PR

--- a/.github/workflows/vscode-extension.yml
+++ b/.github/workflows/vscode-extension.yml
@@ -98,6 +98,7 @@ jobs:
 
   publish-marketplace:
     name: Publish VSCode Extension
+    if: ${{ github.event_name != 'pull_request' }}
     needs:
       - test-build
     runs-on: ubuntu-latest
