--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -337,12 +337,12 @@ jobs:
       - name: Publish for prerelease
         if:  ${{ github.event.release.prerelease && github.event.action != 'published' && startsWith(github.ref, 'refs/tags/v') }}
         run: |
-          npm publish --workspace=$GIT_WORKSPACE --tag 'next' --access public
+          npm publish --workspaces --tag 'next' --access public
       
       - name: Publish for official release
         if: ${{ !github.event.release.prerelease && github.event.action == 'published' }}
         run: |
-          npm publish --workspace=$GIT_WORKSPACE --tag 'latest' --access public
+          npm publish --workspaces --tag 'latest' --access public
   
   vscode-extension-workflow:
     needs: 
