👷 Refactor ➾ Improve Issue and PR Templates (#1412)
* Add steps to reproduce to bug template

* Update dev_task.yml

* Fix linebreaks

* Update pull_request_template.md

* Refactor heading

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -30,6 +30,14 @@ body:
     validations:
       required: true
   - type: textarea
+    id: str
+    attributes:
+      label: 🆘 Steps to Reproduce?
+      description: Also tell us, what did you expect to happen?
+      placeholder: 1) \n2) \n3) \n4) \n5)
+    validations:
+      required: true
+  - type: textarea
     id: logs
     attributes:
       label: 🪵 Relevant log output
