--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,21 +35,31 @@ jobs:
           vscode:
             - 'taqueria-vscode-extension/**'
 
-  detect-minor-version:
+  detect-prerelease:
     runs-on: ubuntu-latest
     if: ${{ startsWith(github.ref, 'refs/tags/v') &&
             !github.event.pull_request.head.repo.fork }}
     outputs:
-      minor-version: ${{ steps.check-minor-version.outputs.result }}
+      prerelease: ${{ steps.get-version.outputs.prerelease }}
     steps:
     - name: Get version
       id: get-version
       uses: battila7/get-version-action@v2
 
-    - name: Check minor version
-      id: check-minor-version
+  job-based-on-prerelease:
+    runs-on: ubuntu-latest
+    needs:
+      - detect-prerelease
+    steps:
+    - name: Is a prerelease
+      if: ${{ needs.detect-prerelease.outputs.prerelease }}
       run: |
-        echo "The prerelease if ${{ steps.get-version.outputs.prerelease }}"
+        This is a prerelease with version preid ${{ needs.detect-prerelease.outputs.prerelease }}
+    - name: Is not a prerelease
+      if: ${{ !needs.detect-prerelease.outputs.prerelease }}
+      run: |
+        This is a full release
+
   # build-and-cache-node-modules:
   #   runs-on: ubuntu-latest
   #   steps:
