--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,10 @@ jobs:
     - name: Build all
       run: |
         export PATH="$PATH:$(pwd)"
-        npm run build-all
+        npx lerna bootstrap 
+        npm build:packages 
+        npm build:binary 
+        npm build:docker
 
     - name: cache node modules
       uses: actions/cache@v3
@@ -333,12 +336,12 @@ jobs:
       - name: Publish for prerelease
         if:  ${{ github.event.release.prerelease && github.event.action != 'published' && startsWith(github.ref, 'refs/tags/v') }}
         run: |
-          npm publish --workspaces --tag 'next' --access public
+          npm publish --workspaces --tag 'next' --access public --registry $PRIVATE_NPM_REGISTRY
       
       - name: Publish for official release
         if: ${{ !github.event.release.prerelease && github.event.action == 'published' }}
         run: |
-          npm publish --workspaces --tag 'latest' --access public
+          npm publish --workspaces --tag 'latest' --access public --registry $PRIVATE_NPM_REGISTRY
 
   vscode-extension-workflow:
     needs: 
