Initial test on a self hosted macmini

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -316,7 +316,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, ecad-macmini]
         chunk-ids: ${{ fromJson(needs.gather-info-for-e2e-tests.outputs['test-chunk-ids']) }}
         include:
         - os: ubuntu-latest
