--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"test": "yarn",
 		"build": "./bin/build.sh || npx play-sound beep.mp3",
 		"build-all": "./bin/build-all.sh",
+		"build-types": "npx ts-to-zod taqueria-protocol-types/types.ts taqueria-protocol-types/out/types-zod.ts",
 		"deploy": "./bin/deploy.sh",
 		"parse-readme-template": "ts-node ./parse-readme-template.ts",
 		"build-website": "npm run parse-readme-template && cd website && npm ci --legacy-peer-deps && npm run build",
@@ -53,6 +54,7 @@
 		"play-sound-cli": "^1.0.0",
 		"ts-jest": "^28.0.7",
 		"ts-node": "^10.8.0",
+		"ts-to-zod": "^1.13.1",
 		"tsup": "^6.1.3",
 		"typescript": "^4.7.4",
 		"with-staged": "^1.0.2"
