--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -334,12 +334,12 @@ jobs:
           npm publish --workspaces --no-private --registry $PRIVATE_NPM_REGISTRY
 
       - name: Publish for prerelease
-        if:  ${{ github.event.release.prerelease && github.event.action != 'published' && startsWith(github.ref, 'refs/tags/v') }}
+        if: ${{ needs.workflow-setup.outputs.prerelease && github.event.release.prerelease && startsWith(github.ref, 'refs/tags/v') }}
         run: |
           npm publish --workspaces --tag 'next' --access public --registry $PRIVATE_NPM_REGISTRY
       
       - name: Publish for official release
-        if: ${{ !github.event.release.prerelease && github.event.action == 'published' }}
+        if: ${{ !needs.workflow-setup.outputs.prerelease && !github.event.release.prerelease && github.event.action == 'published' }}
         run: |
           npm publish --workspaces --tag 'latest' --access public --registry $PRIVATE_NPM_REGISTRY
 
@@ -348,6 +348,8 @@ jobs:
       - publish-npm-packages
     if: ${{ !github.event.pull_request.head.repo.fork }}
     uses: ./.github/workflows/vscode-extension.yml
+    inputs:
+      prerelease: ${{ needs.workflow-setup.outputs.prerelease }}
     secrets:
       GCP_PROJECT: ${{ secrets.GCP_PROJECT }}
       GCP_SERVICE_ACCOUNT: ${{ secrets.GCP_SERVICE_ACCOUNT }} 
