chore: vscode release workflow conditions

--- a/.github/workflows/vscode-extension.yml
+++ b/.github/workflows/vscode-extension.yml
@@ -5,6 +5,7 @@ on:
     inputs:
       prerelease:
         required: false
+        type: string
     secrets:
       GCP_PROJECT:
         required: true
