--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"test": "yarn",
 		"build": "./bin/build.sh || npx play-sound beep.mp3",
 		"build-all": "./bin/build-all.sh",
-		"build-types": "npx ts-to-zod taqueria-protocol-types/types.ts taqueria-protocol-types/out/types-zod.ts",
+		"build-types": "npx ts-to-zod taqueria-protocol-types/types.ts taqueria-protocol-types/out/types-zod.ts && npx ts-node taqueria-protocol-types/scripts/build-types.ts",
 		"deploy": "./bin/deploy.sh",
 		"parse-readme-template": "ts-node ./parse-readme-template.ts",
 		"build-website": "npm run parse-readme-template && cd website && npm ci --legacy-peer-deps && npm run build",
