--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -3,7 +3,7 @@ description: File a bug report
 title: "🐛 Bug ➾ "
 labels: ["bug", "triage"]
 assignees:
-  - sinapsist
+  - alexzbusko
 body:
   - type: markdown
     attributes:
