--- a/taqueria-plugin-archetype/package.json
+++ b/taqueria-plugin-archetype/package.json
@@ -41,7 +41,8 @@
 	"homepage": "https://github.com/ecadlabs/taqueria#readme",
 	"dependencies": {
 		"@taqueria/node-sdk": "^0.22.2",
-		"fast-glob": "^3.2.11"
+		"fast-glob": "^3.2.11",
+		"ts-pattern": "^4.0.5"
 	},
 	"devDependencies": {
 		"parcel": "2.6.1",
