--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -336,12 +336,14 @@ jobs:
       - name: Publish for prerelease
         if: ${{ needs.workflow-setup.outputs.prerelease && github.event.release.prerelease && startsWith(github.ref, 'refs/tags/v') }}
         run: |
-          npm publish --workspaces --tag 'next' --access public --registry
+          echo ${NODE_AUTH_TOKEN} >> ~/.npmrc
+          npm publish --workspaces --tag 'next' --access public --registry $NPM_REGISTRY
       
       - name: Publish for official release
         if: ${{ !needs.workflow-setup.outputs.prerelease && !github.event.release.prerelease && github.event.action == 'published' }}
         run: |
-          npm publish --workspaces --tag 'latest' --access public --registry
+          echo ${NODE_AUTH_TOKEN} >> ~/.npmrc
+          npm publish --workspaces --tag 'latest' --access public --registry $NPM_REGISTRY
 
   vscode-extension-workflow:
     needs: 
