chore: changed vscode needs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -347,6 +347,7 @@ jobs:
 
   vscode-extension-workflow:
     needs: 
+      - workflow-setup
       - publish-npm-packages
     if: ${{ !github.event.pull_request.head.repo.fork }}
     uses: ./.github/workflows/vscode-extension.yml
