👷 Refactor ➾ (ci): Reintroduce a `preid` to Prereleases (#1423)
* chore: initial checks for prerelease value

* chore: stop docker workflow

* chore: job with prerelease condition

* chore: fix echo

* chore: change initial setup job

* chore: fix broken dependency

* chore: fix workflow-setup job name

* chore: change to private registry for testing

* chore: vscode release workflow conditions

* chore: remove condition on publish vscode job

* chore: cleanup workflows

* chore: fix registry auth

* chore: changes to conditions

* chore: vscode needs workflow-setup

--- a/.github/workflows/vscode-extension.yml
+++ b/.github/workflows/vscode-extension.yml
@@ -2,6 +2,10 @@ name: VSCode Extension
 
 on:
   workflow_call:
+    inputs:
+      prerelease:
+        required: false
+        type: string
     secrets:
       GCP_PROJECT:
         required: true
@@ -98,7 +102,6 @@ jobs:
 
   publish-marketplace:
     name: Publish VSCode Extension
-    if: ${{ github.event_name != 'pull_request' }}
     needs:
       - test-build
     runs-on: ubuntu-latest
@@ -121,7 +124,7 @@ jobs:
 
       # Separate steps for prerelease and release workflows
       - name: Publish as pre-release
-        if: ${{ github.event.release.prerelease }}
+        if: ${{ inputs.prerelease }}
         uses: HaaLeo/publish-vscode-extension@v1.0.4
         with:
           pat: ${{ secrets.VSCE_PAT }}
@@ -131,7 +134,7 @@ jobs:
           preRelease: true
 
       - name: Publish as official release
-        if: ${{ !github.event.release.prerelease }}
+        if: ${{ !inputs.prerelease && !github.event.release.prerelease && github.event.action == 'published' }}
         uses: HaaLeo/publish-vscode-extension@v1.0.4
         with:
           pat: ${{ secrets.VSCE_PAT }}
