--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,75 +21,62 @@ concurrency:
 jobs:
   # When we use reusable we lose the ability to to filter out the workflow for changes to certain paths.
   # This job creates boolean outputs based on path filters. These outputs can then be used as job conditions
-  detect-changes:
+  workflow-setup:
+    name: Initial workflow checks
     runs-on: ubuntu-latest
     if: ${{ !github.event.pull_request.head.repo.fork }}
     outputs:
-      vscode: ${{ steps.filter.outputs.vscode }}
+      vscode-changes: ${{ steps.filter.outputs.vscode }}
+      prerelease: ${{ steps.get-version.outputs.prerelease }}
     steps:
     - uses: actions/checkout@v3
-    - uses: dorny/paths-filter@v2
+
+    - uses: actions/setup-node@v3
+      with: 
+        cache: 'npm'
+
+    - name: check for VSCode changes
+      uses: dorny/paths-filter@v2
       id: filter
       with:
         filters: |
           vscode:
             - 'taqueria-vscode-extension/**'
 
-  detect-minor-version:
-    runs-on: ubuntu-latest
-    if: ${{ startsWith(github.ref, 'refs/tags/v') &&
-            !github.event.pull_request.head.repo.fork }}
-    outputs:
-      minor-version: ${{ steps.check-minor-version.outputs.result }}
-    steps:
-    - name: Get version
+    - name: get tag version
       id: get-version
       uses: battila7/get-version-action@v2
 
-    - name: Check minor version
-      id: check-minor-version
+    - name: Setup Deno
+      uses: denoland/setup-deno@v1
+      with:
+        deno-version: "1.23.4"
+
+    - name: Build all
       run: |
-        if [ $(( ${{ steps.get-version.outputs.minor }} % 2 )) -eq 0 ]; then
-          echo "::set-output name=result::even"
-        else
-          echo "::set-output name=result::odd"
-        fi
-  build-and-cache-node-modules:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Setup repo
-        uses: actions/checkout@v3
-         
-      - uses: actions/setup-node@v3
-        with: 
-          cache: 'npm'
+        export PATH="$PATH:$(pwd)"
+        npx lerna bootstrap 
+        npm run build:packages 
+        npm run build:binary 
+        npm run build:docker
 
-      - name: Setup Deno
-        uses: denoland/setup-deno@v1
-        with:
-          deno-version: "1.23.4"
-
-      - name: Build all
-        run: |
-          export PATH="$PATH:$(pwd)"
-          npm run build-all
-
-      - name: Cache node modules
-        uses: actions/cache@v3
-        with:
-          path: ./node_modules/**
-          key: cache-node-modules-${{ github.run_id }}
+    - name: cache node modules
+      uses: actions/cache@v3
+      with:
+        path: ./node_modules/**
+        key: cache-node-modules-${{ github.run_id }}
 
   build-binaries:
+    name: Build Taqueria binaries
     permissions:
       contents: 'read'
       id-token: 'write'
     runs-on: ${{ matrix.os }}
     if: ${{ github.event_name != 'release' && !github.event.pull_request.head.repo.fork }}
     needs:
-      - build-and-cache-node-modules
+      - workflow-setup
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
        include:
          - os: ubuntu-latest
@@ -307,7 +294,7 @@ jobs:
   publish-npm-packages:
     runs-on: ubuntu-latest
     needs:
-      - build-and-cache-node-modules
+      - workflow-setup
     permissions:
       packages: write
       contents: read
@@ -347,20 +334,25 @@ jobs:
           npm publish --workspaces --no-private --registry $PRIVATE_NPM_REGISTRY
 
       - name: Publish for prerelease
-        if:  ${{ github.event.release.prerelease && github.event.action != 'published' && startsWith(github.ref, 'refs/tags/v') }}
+        if: ${{ needs.workflow-setup.outputs.prerelease }}
         run: |
-          npm publish --workspaces --tag 'next' --access public
+          echo ${NODE_AUTH_TOKEN} >> ~/.npmrc
+          npm publish --workspaces --tag 'next' --access public --registry $NPM_REGISTRY
       
       - name: Publish for official release
-        if: ${{ !github.event.release.prerelease && github.event.action == 'published' }}
+        if: ${{ !needs.workflow-setup.outputs.prerelease && !github.event.release.prerelease && github.event.action == 'published' }}
         run: |
-          npm publish --workspaces --tag 'latest' --access public
+          echo ${NODE_AUTH_TOKEN} >> ~/.npmrc
+          npm publish --workspaces --tag 'latest' --access public --registry $NPM_REGISTRY
 
   vscode-extension-workflow:
     needs: 
+      - workflow-setup
       - publish-npm-packages
     if: ${{ !github.event.pull_request.head.repo.fork }}
     uses: ./.github/workflows/vscode-extension.yml
+    with:
+      prerelease: ${{ needs.workflow-setup.outputs.prerelease }}
     secrets:
       GCP_PROJECT: ${{ secrets.GCP_PROJECT }}
       GCP_SERVICE_ACCOUNT: ${{ secrets.GCP_SERVICE_ACCOUNT }} 
@@ -469,7 +461,7 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     needs:
-      - detect-minor-version
+      - workflow-setup
       - build-binaries
       - publish-npm-packages
       - vscode-extension-workflow
@@ -488,7 +480,7 @@ jobs:
           wget ${{ needs.vscode-extension-workflow.outputs.vsixGcsUrl }}
 
       - name: Pre-release
-        if: ${{ needs.detect-minor-version.outputs.minor-version == 'odd' }}
+        if: ${{ needs.workflow-setup.outputs.prerelease }}
         id: pre-release
         uses: softprops/action-gh-release@v1
         with:
@@ -498,7 +490,7 @@ jobs:
           prerelease: true
 
       - name: Final release
-        if: ${{ needs.detect-minor-version.outputs.minor-version == 'even' }}
+        if: ${{ !needs.workflow-setup.outputs.prerelease }}
         id: final-release
         uses: softprops/action-gh-release@v1
         with:
