--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,8 @@ tests/coverage
 /taqueria-sdk/*.mjs
 /taqueria-sdk/*.mjs.map
 /taqueria-sdk/*.d.ts
+/taqueria-plugin-core/index.js
+/taqueria-plugin-core/index.js.map
 /taqueria-plugin-smartpy/index.js
 /taqueria-plugin-smartpy/index.js.map
 /taqueria-plugin-ligo/index.js
