--- a/nx.json
+++ b/nx.json
@@ -5,6 +5,7 @@
 			"options": {
 				"cacheableOperations": [
 					"build-package",
+					"build-docker",
 					"build",
 					"test:unit",
 					"test:integration",
