--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,18 +47,18 @@ jobs:
       id: get-version
       uses: battila7/get-version-action@v2
 
-    - name: Setup Deno
-      uses: denoland/setup-deno@v1
-      with:
-        deno-version: "1.23.4"
+    # - name: Setup Deno
+    #   uses: denoland/setup-deno@v1
+    #   with:
+    #     deno-version: "1.23.4"
 
-    - name: Build all
-      run: |
-        export PATH="$PATH:$(pwd)"
-        npx lerna bootstrap 
-        npm run build:packages 
-        npm run build:binary 
-        npm run build:docker
+    # - name: Build all
+    #   run: |
+    #     export PATH="$PATH:$(pwd)"
+    #     npx lerna bootstrap 
+    #     npm run build:packages 
+    #     npm run build:binary 
+    #     npm run build:docker
 
       # - name: Cache node modules
       #   uses: actions/cache@v3
@@ -218,7 +218,7 @@ jobs:
     needs:
       - build-binaries
       - gather-info-for-e2e-tests
-    if: ${{ always() && !(contains(needs.*.result, 'failure')) && github.event_name != 'release' && !(startsWith(github.ref, 'refs/tags/v')) }}
+    if: ${{ github.event_name != 'release' && !(startsWith(github.ref, 'refs/tags/v')) }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -233,7 +233,10 @@ jobs:
       - name: Build all
         run: |
           export PATH="$PATH:$(pwd)"
-          npm run build-all
+          npx lerna bootstrap 
+          npm run build:packages 
+          npm run build:binary 
+          npm run build:docker
 
       - name: Run unit tests
         run: npm run test:unit -w tests
