--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -287,6 +287,11 @@ jobs:
           scope: "${{ env.SCOPE }}"
           cache: 'npm'
 
+      - name: Setup Deno
+        uses: denoland/setup-deno@v1
+        with:
+          deno-version: "1.23.4"
+
       - name: Add working dir to PATH
         run: echo "$(pwd)" >> $GITHUB_PATH
 
