--- a/taqueria-plugin-core/package.json
+++ b/taqueria-plugin-core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-core",
-	"version": "0.23.1-rc1",
+	"version": "0.23.1-rc.1",
 	"description": "A taqueria plugin for core tasks",
 	"targets": {
 		"default": {
@@ -43,6 +43,6 @@
 		"typescript": "^4.7.2"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.23.1-rc1"
+		"@taqueria/node-sdk": "^0.23.1-rc.1"
 	}
 }
