--- a/taqueria-plugin-metadata/package.json
+++ b/taqueria-plugin-metadata/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-metadata",
-	"version": "0.23.1-rc1",
+	"version": "0.23.1-rc.1",
 	"description": "A plugin for Taqueria providing metadata creation and validation.",
 	"keywords": [
 		"taqueria",
@@ -31,8 +31,8 @@
 		"directory": "taqueria-plugin-metadata"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.23.1-rc1",
-		"@taqueria/protocol": "^0.23.1-rc1",
+		"@taqueria/node-sdk": "^0.23.1-rc.1",
+		"@taqueria/protocol": "^0.23.1-rc.1",
 		"prompts": "^2.4.2"
 	},
 	"devDependencies": {
