--- a/taqueria-toolkit/package.json
+++ b/taqueria-toolkit/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/toolkit",
-	"version": "0.23.1-rc1",
+	"version": "0.23.1-rc.1",
 	"description": "A TypeScript library for NodeJS to work with Taqueria projects",
 	"main": "./index.js",
 	"source": "./index.ts",
