--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
 		"ts-node": "^10.8.0",
 		"tsup": "^6.1.3",
 		"typescript": "^4.7.4",
-		"with-staged": "^1.0.2"
+		"with-staged": "^1.0.2",
+		"nx": "15.0.12",
+		"@nrwl/nx-cloud": "latest"
 	},
 	"workspaces": [
 		"./taqueria-protocol",
