--- a/taqueria-protocol-types/package.json
+++ b/taqueria-protocol-types/package.json
@@ -32,6 +32,7 @@
 		"typescript": "^4.7.2"
 	},
 	"exports": {
+		".": "./index.js",
 		"./*": {
 			"import": "./*.mjs",
 			"default": "./*.js"
@@ -40,7 +41,7 @@
 			"import": "./*.mjs",
 			"default": "./*.js"
 		},
-		"./out/*": {
+		"./out/**/*": {
 			"import": "./*.mjs",
 			"default": "./*.js"
 		},
@@ -61,7 +62,8 @@
 	"tsup": {
 		"entry": [
 			"[!.]+.ts",
-			"out/types/*.ts"
+			"out/types/*.ts",
+			"out/*.ts"
 		],
 		"sourcemap": true,
 		"target": "node16",
