--- a/taqueria-toolkit/package.json
+++ b/taqueria-toolkit/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/toolkit",
-	"version": "0.22.2",
+	"version": "0.23.2-rc.1",
 	"description": "A TypeScript library for NodeJS to work with Taqueria projects",
 	"main": "./index.js",
 	"source": "./index.ts",
@@ -36,6 +36,5 @@
 		"@types/node": "^17.0.12",
 		"esbuild": "^0.14.39",
 		"typescript": "^4.7.2"
-	},
-	"dependencies": {}
+	}
 }
