--- a/.github/workflows/vscode-extension.yml
+++ b/.github/workflows/vscode-extension.yml
@@ -109,7 +109,7 @@ jobs:
     name: Publish VSCode Extension
     needs:
       - test-build
-    if: ${{ github.event_name != 'pull_request' || github.event_name != 'push' }}
+    if: ${{ github.event_name != 'pull_request' }}
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
