--- a/taqueria-flextesa-manager/package.json
+++ b/taqueria-flextesa-manager/package.json
@@ -5,7 +5,7 @@
 	"description": "Provides an interface and abstraction over a flextesa mininet",
 	"main": "index.js",
 	"scripts": {
-		"build-package": "npx tsc --emitDeclarationOnly -p ./tsconfig.json && npx tsup",
+		"build-package": "npx tsc -p ./tsconfig.json && npx esbuild index.ts --bundle --outfile=index.js --platform=node",
 		"build-docker": "TAQ_VERSION=`taq --version` BUILD=`taq --build`; docker build . -t \"ghcr.io/ecadlabs/taqueria-flextesa:${TAQ_VERSION}-${BUILD}\"",
 		"build": "npm run build-package",
 		"build-all": "npm run build-package && npm run build-docker"
@@ -34,21 +34,5 @@
 		"promise-retry": "^2.0.1",
 		"yargs": "^17.5.1",
 		"zod": "^3.17.3"
-	},
-	"tsup": {
-		"entry": [
-			"[!.]+.ts"
-		],
-		"sourcemap": true,
-		"target": "node16",
-		"outDir": "./",
-		"dts": false,
-		"clean": false,
-		"skipNodeModulesBundle": true,
-		"platform": "node",
-		"format": [
-			"esm",
-			"cjs"
-		]
 	}
 }
