--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -289,7 +289,8 @@ jobs:
       - uses: actions/setup-node@v3
         with: 
           scope: "${{ env.SCOPE }}"
-          cache: 'npm'
+          cache: "npm"
+          node-version: "18.12.0"
 
       - name: Setup Deno
         uses: denoland/setup-deno@v1
