--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,7 @@ jobs:
 
     - uses: actions/setup-node@v3
       with: 
+        node-version: 16.16.x
         cache: 'npm'
 
     - name: check for VSCode changes
