trying to rebuild before running all other commands

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,9 @@ jobs:
       with:
         deno-version: "1.23.4"
 
+    - name: cleaning before setup
+      run: npm rebuild 
+      
     - name: Build all
       run: |
         export PATH="$PATH:$(pwd)"
