--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,8 +54,10 @@ jobs:
         deno-version: "1.23.4"
 
     - name: cleaning before setup
-      run: npm rebuild 
-      
+      run: |
+        npm rebuild
+        git clean -f
+
     - name: Build all
       run: |
         export PATH="$PATH:$(pwd)"
