--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
 
     - uses: actions/setup-node@v3
       with: 
-        node-version: 18.x
+        node-version: v16.17.0
         cache: 'npm'
 
     - name: check for VSCode changes
