--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,6 +55,7 @@ jobs:
     - name: Build all
       run: |
         export PATH="$PATH:$(pwd)"
+        npm config list registry
         npx lerna bootstrap 
         npm run build:packages 
         npm run build:binary 
