--- a/taqueria-plugin-jest/package.json
+++ b/taqueria-plugin-jest/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-jest",
-	"version": "0.22.2",
+	"version": "0.23.8-rc.1",
 	"main": "index.cjs",
 	"module": "index.js",
 	"source": "index.ts",
@@ -27,7 +27,7 @@
 		"directory": "taqueria-plugin-jest"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.22.2",
+		"@taqueria/node-sdk": "^0.23.8-rc.1",
 		"@taqueria/plugin-contract-types": "^0.14.4",
 		"@taquito/signer": "^13.0.1",
 		"@taquito/taquito": "^13.0.1",
