--- a/taqueria-plugin-taquito/package.json
+++ b/taqueria-plugin-taquito/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-taquito",
-	"version": "0.22.2",
+	"version": "0.23.8-rc.1",
 	"description": "A taqueria plugin for originating smart contracts using Taquito",
 	"targets": {
 		"default": {
@@ -46,7 +46,7 @@
 		"typescript": "^4.7.2"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.22.2",
+		"@taqueria/node-sdk": "^0.23.8-rc.1",
 		"@taquito/michel-codec": "^13.0.1",
 		"@taquito/signer": "^13.0.1",
 		"@taquito/taquito": "^13.0.1",
