chore: change node version to lts syntax

--- a/.github/workflows/vscode-extension.yml
+++ b/.github/workflows/vscode-extension.yml
@@ -110,7 +110,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16.16.x
+          node-version: lts/gallium
           cache: "npm"
 
       - name: Cache node modules
