--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
 
     - uses: actions/setup-node@v3
       with:
-        node-version: 16.16.x
+        node-version: lts/gallium
         cache: "npm"
 
     - name: check for VSCode changes
@@ -164,7 +164,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16.16.x
+          node-version: lts/gallium
           cache: "npm"
 
       # This step currently attempts to put all test files found in the e2e folder into 4 equal sized buckets. The output is a list of lists
@@ -224,7 +224,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16.16.x
+          node-version: lts/gallium
           cache: "npm"
 
       - uses: denoland/setup-deno@v1
@@ -312,7 +312,7 @@ jobs:
       - uses: actions/setup-node@v3
         with: 
           scope: "${{ env.SCOPE }}"
-          node-version: 16.16.x
+          node-version: lts/gallium
           cache: "npm"
 
       - name: Cache node modules
