--- a/.github/workflows/vscode-extension.yml
+++ b/.github/workflows/vscode-extension.yml
@@ -45,7 +45,7 @@ jobs:
       
       - uses: actions/setup-node@v3
         with:
-          node-version: 16.16.x
+          node-version: lts/gallium
           cache: "npm"
 
 
