--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,9 @@ jobs:
     - uses: actions/checkout@v3
 
     - uses: actions/setup-node@v3
-      with: 
-        cache: 'npm'
+      with:
+        node-version: lts/gallium
+        cache: "npm"
 
     - name: check for VSCode changes
       uses: dorny/paths-filter@v2
@@ -163,8 +164,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16.16.x
-          cache: 'npm'
+          node-version: lts/gallium
+          cache: "npm"
 
       # This step currently attempts to put all test files found in the e2e folder into 4 equal sized buckets. The output is a list of lists
       - id: set-test-chunks
@@ -223,8 +224,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16.16.x
-          cache: 'npm'
+          node-version: lts/gallium
+          cache: "npm"
 
       - uses: denoland/setup-deno@v1
         with:
@@ -311,7 +312,8 @@ jobs:
       - uses: actions/setup-node@v3
         with: 
           scope: "${{ env.SCOPE }}"
-          cache: 'npm'
+          node-version: lts/gallium
+          cache: "npm"
 
       - name: Cache node modules
         uses: actions/cache@v3
