--- a/.gitignore
+++ b/.gitignore
@@ -189,7 +189,8 @@ website/docs/glossary.md
 website/yarn.lock
 taqueria-plugin-metadata/index.js
 taqueria-plugin-metadata/index.js.map
-taqueria-protocol-types/**/*.js
-taqueria-protocol-types/**/*.map
-taqueria-protocol-types/**/*.d.ts
-taqueria-protocol-types/**/*.mjs
+taqueria-protocol/types/**/*.js
+taqueria-protocol/types/**/*.map
+taqueria-protocol/types/**/*.d.ts
+taqueria-protocol/types/**/*.mjs
+taqueria-protocol/types/out
