--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
 		"test": "yarn",
 		"bootstrap": "lerna bootstrap --force-local",
 		"build-all": "./bin/build-all.sh",
-		"build:binary": "./bin/build.sh || npx play-sound beep.mp3",
+		"build:binary": "./bin/build.sh",
 		"build:docker": "lerna run build-docker",
 		"build:packages": "lerna run build",
 		"deploy": "lerna version --no-push --no-git-tag-version --no-private",
 		"parse-readme-template": "ts-node ./parse-readme-template.ts",
 		"build-website": "npm run parse-readme-template && cd website && npm ci --legacy-peer-deps && npm run build",
 		"serve-website": "cd website && npm run serve",
-		"watch": "npx chokidar \"*.ts\" \"taqueria-utils/**/*.ts\" \"taqueria-protocol/**/*.ts\" -c \"npm run build || npx play-sound beep.mp3\" --initial",
-		"build-and-watch-vscode": "npx chokidar \"*.ts\" \"taqueria-vscode-extension/**/*.ts\" \"taqueria-protocol/**/*.ts\" -c \"npm run compile -w taqueria-vscode-extension || npx play-sound beep.mp3\" --initial",
+		"watch": "npx chokidar \"*.ts\" \"taqueria-utils/**/*.ts\" \"taqueria-protocol/**/*.ts\" -c \"npm run build\" --initial",
+		"build-and-watch-vscode": "npx chokidar \"*.ts\" \"taqueria-vscode-extension/**/*.ts\" \"taqueria-protocol/**/*.ts\" -c \"npm run compile -w taqueria-vscode-extension\" --initial",
 		"prepare": "husky install",
 		"format": "dprint fmt",
 		"format:check": "dprint check",
@@ -53,7 +53,6 @@
 		"husky": "^8.0.1",
 		"lerna": "^6.0.1",
 		"lint-staged": "^12.4.1",
-		"play-sound-cli": "^1.0.0",
 		"ts-jest": "^28.0.7",
 		"ts-node": "^10.8.0",
 		"tsup": "^6.1.3",
