--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,7 +91,7 @@ jobs:
            os_short: windows
            deno_target: "x86_64-pc-windows-msvc"
            taqueria_bin: "taq.exe"
-         - os: ecad-macmini
+         - os: macOS-latest
            os_short: macos
            deno_target: "x86_64-apple-darwin"
            taqueria_bin: "taq"
