--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -244,6 +244,7 @@ jobs:
           npm run build:packages 
           deno compile --output taq --allow-run --allow-write --allow-read --allow-env --allow-net --import-map ./import_map.json --no-prompt index.ts --quickstart "`cat quickstart.md`" --setBuild "$BUILD" --setVersion "$TAQ_VERSION" --lock ./deno-lock.json
           npm run build:docker
+# Comment to run tests
 
       - name: Run unit tests
         run: npm run test:unit -w tests
